--- a/Dashboard/templates/dashboard/index.html
+++ b/Dashboard/templates/dashboard/index.html
@@ -10,22 +10,41 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap5.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'fullcalendar/lib/main.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital@0;1&family=Roboto+Slab&display=swap"
+          rel="stylesheet">
+    {% block styles %}
+    {% endblock %}
     <style>
+        body {
+            font-family: 'PT Sans', sans-serif;
+        }
+
         .modal.in {
             background-color: rgba(0, 0, 0, 0.5);
         }
+
+        .radioChoice, .radioChoice > li {
+            list-style: none;
+            display: inline-block;
+            margin: 0;
+            padding: 0;
+        }
     </style>
+
 </head>
 <body>
 {% block content %}
 {% endblock %}
-
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/jquery-3.5.1.js' %}"></script>
 <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'js/dataTables.bootstrap5.min.js' %}"></script>
 <script src="{% static 'js/script.js' %}"></script>
+<script src="{% static 'fullcalendar/lib/main.js' %}"></script>
 {% block dashboardscripts %}
 {% endblock %}
 {% block scripts %}
